fix: wrap added to input container

--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -5,12 +5,15 @@ body {
   background-color: u.$clr-secondary-300;
 }
 
+.main {
+  display: flex;
+  justify-content: center;
+}
+
 
 @media screen and (min-width: 700px) {
   .main {
-    display: flex;
     min-height: 100vh;
-    justify-content: center;
     align-items: center;
   }
 
